TP-214 refactor(NotaFiscal): melhora os testes da service NotaFiscal